samples/_failures_safe/1761301858_d2d1b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd332313.c: In function ‘main’:
./samples/SAFE/__tmp_cd332313.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
